# cg_mrslam

./: CMakeLists.txt  LICENSE  README.md  mainpage.dox  manifest.xml  package.xml
cmake_modules/: FindG2O.cmake  G2OConfig.cmake
docs/: Doxyfile
msg/: Edge.msg  Ping.msg  RobotLaser.msg  SLAM.msg  VSE2.msg
src/: CMakeLists.txt  bag_mrslam.cpp  cg_mrslam.cpp  comm_publisher.cpp  graph_ros_publisher.h  real_mrslam.cpp  ros_handler.cpp  ros_handler.h  sim_mrslam.cpp  srslam.cpp
src/map_creation/: CMakeLists.txt  frequency_map.cpp  frequency_map.h  graph2occupancy.cpp  graph2occupancy.h  grid_line_traversal.cpp  grid_line_traversal.h  occupancy_map_server.cpp  occupancy_map_server.h
src/matcher/: CMakeLists.txt  array_allocator.h  chargrid.cpp  chargrid.h  gridmap.h  macros.h  scan_matcher.cpp  scan_matcher.h
src/mrslam/: CMakeLists.txt  graph_comm.cpp  graph_comm.h  mr_closure_buffer.cpp  mr_closure_buffer.h  mr_graph_slam.cpp  mr_graph_slam.h  msg_factory.cpp  msg_factory.h
src/mrslam/condensedGraphs/: condensed_graph_buffer.cpp  condensed_graph_creator.h  edge_labeler.h
src/mrslam/condensed_graph/: CMakeLists.txt  condensed_graph_buffer.cpp  condensed_graph_buffer.h  condensed_graph_creator.cpp  condensed_graph_creator.h  edge_labeler.cpp
src/ros_map_publisher/: CMakeLists.txt  frequency_map.cpp  frequency_map.h  graph2occupancy.cpp  graph2occupancy.h  occupancy_map_server.cpp  occupancy_map_server.h
src/ros_utils/: CMakeLists.txt  graph_ros_publisher.cpp  graph_ros_publisher.h  ros_handler.cpp  ros_handler.h
src/slam/: CMakeLists.txt  closure_buffer.cpp  closure_buffer.h  closure_checker.cpp  closure_checker.h  graph_manipulator.cpp  graph_manipulator.h  graph_slam.cpp  graph_slam.h  vertices_finder.cpp  vertices_finder.h
